--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "express-hello-world",
+  "name": "volcano-nft-image",
   "version": "1.0.0",
-  "description": "Express Hello World on Render",
+  "description": "Express VolcanoNFT image upload on Render Node Express app",
   "main": "app.js",
-  "repository": "https://github.com/render-examples/express-hello-world",
-  "author": "Render Developers",
+  "repository": "https://github.com/binghy/volcanoNFT",
+  "author": "Marco Giangolini",
   "license": "MIT",
   "private": false,
   "scripts": {
